name:                partial-map
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
copyright:           Copyright (C) Obsidian Systems LLC 2018
author:              Obsidian Systems
maintainer:          maintainer@obsidian.systems
category:            Data
stability:           Experimental
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.PartialMap
  build-depends:       aeson
                     , base
                     , containers
                     , monoidal-containers
  hs-source-dirs:      src
  default-language:    Haskell2010
